css update horizontal scroll bar results fix

--- a/style.css
+++ b/style.css
@@ -168,6 +168,14 @@ p { font-size: 18px; }
     justify-content: flex-start;
 }
 
+.result__recipe--item {
+    flex: 1;
+}
+
+.result__drink--item {
+    flex: 1;
+}
+
 .result__image {
     height: 200px;
     width: 150px;
@@ -232,6 +240,10 @@ a:active { color: #c7a632ff; }
         border-radius:  15%;
         width: 100%;
         height: 100%;
+        padding-top: 0;
+        padding-bottom: 0;
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
     .intro--align {
@@ -296,16 +308,14 @@ a:active { color: #c7a632ff; }
     }
 
     .result__recipe--item {
-        flex-grow: 0;
+        flex-grow: 1;
         flex-shrink: 2;
         flex-basis: 0;
-        max-width: 100%;
     }
 
     .result__drink--item {
         flex-grow: 0.5;
         flex-shrink: 3;
-        max-width: 100%;
     }
     
 
